--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -73,6 +73,17 @@ jobs:
     - get: pipelines
   - task: dev-deploy
     file: ((deploy_dev_task))
+    params:
+      CF_APP_NAME: ((app_name))
+      CF_HOSTNAME: ((cf_dev_hostname))
+      CF_API: ((cf_dev_api))
+      CF_USERNAME: ((cf_dev_username))
+      CF_PASSWORD: ((cf_dev_password))
+      CF_ORGANIZATION: ((cf_dev_organization))
+      CF_SPACE: ((cf_dev_space))
+      CF_MANIFEST: ((cf_dev_manifest))
+      CF_DOMAIN: ((cf_dev_domain))
+
 
 - name: major
   serial_groups: [version]
