--- a/ci/config.yml
+++ b/ci/config.yml
@@ -10,14 +10,14 @@ github_app_repo_branch: master # don't change
 github_pipelines_repo_uri: https://github.com/morganstakecgi/training-pipelines-initial.git
 github_pipelines_repo_branch: master # don't change
 
-version_bucket: cgi-ci
+version_bucket: version
 version_bucket_region_name: ""
 
 version_key: mstake-company-version # set to '<first_initial><lastname>-company-version'.  ex: sgreenberg-company-version
 initial_version: 0.0.1
 
 artifact_regexp: mstake-company-(.*).jar # set to '<first_initial><lastname>-company-(.*).jar'.  ex: sgreenberg-company-(.*).jar
-artifact_bucket: cgi-ci
+artifact_bucket: artifact
 artifact_bucket_region_name: ""
 
 cf_dev_api: https://api.run.pivotal.io # set to cf api endpoint
